Add automated test to create and fetch an organisation using an in-memory cache
